welcome.lessons.welcome.array.notriples.NoTriples.scala.code
def noTriples(nums:Array[Int]): Boolean = {
	var x=0
	
	for(i<- 0 to nums.length-3){
		if(nums(i)==nums(i+1) && nums(i)==nums(i+2)){x=1}
		else{return false}
		}
		if(x==1){return true}
}
